--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/all.css" />
-    <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/master.css" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="all.css" />
+    <link rel="stylesheet" href="all.min.css" />
+    <link rel="stylesheet" href="master.css" />
+    <link rel="stylesheet" href="bootstrap.css" />
+    <link rel="stylesheet" href="bootstrap.min.css" />
     <title>JS TASK2</title>
   </head>
   <body class="">
@@ -21,7 +21,7 @@
     <div class="container p-5 position-relative">
       <div class="row d-flex justify-content-between mb-4">
         <div class="card" style="width: 18rem">
-          <img src="img/shopping (2).webp" class="card-img-top" alt="..." />
+          <img src="shopping (2).webp" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title text-danger"></h5>
             <p class="card-text"></p>
@@ -31,7 +31,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="img/shopping (1).webp" class="card-img-top" alt="..." />
+          <img src="shopping (1).webp" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title text-danger"></h5>
             <p class="card-text"></p>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="img/shopping.webp" class="card-img-top" alt="..." />
+          <img src="shopping.webp" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title text-danger"></h5>
             <p class="card-text"></p>
@@ -52,7 +52,7 @@
       </div>
       <div class="row d-flex justify-content-between mb-4">
         <div class="card" style="width: 18rem">
-          <img src="img/shopping (2).webp" class="card-img-top" alt="..." />
+          <img src="shopping (2).webp" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title text-danger"></h5>
             <p class="card-text"></p>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="img/shopping (1).webp" class="card-img-top" alt="..." />
+          <img src="shopping (1).webp" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title text-danger"></h5>
             <p class="card-text"></p>
@@ -72,7 +72,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="img/shopping.webp" class="card-img-top" alt="..." />
+          <img src="shopping.webp" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title text-danger"></h5>
             <p class="card-text"></p>
@@ -83,7 +83,7 @@
       </div>
       <div class="row d-flex justify-content-between mb-4">
         <div class="card" style="width: 18rem">
-          <img src="img/shopping (2).webp" class="card-img-top" alt="..." />
+          <img src="shopping (2).webp" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title text-danger"></h5>
             <p class="card-text"></p>
@@ -93,7 +93,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="img/shopping (1).webp" class="card-img-top" alt="..." />
+          <img src="shopping (1).webp" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title text-danger"></h5>
             <p class="card-text"></p>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="card" style="width: 18rem">
-          <img src="img/shopping.webp" class="card-img-top" alt="..." />
+          <img src="shopping.webp" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title text-danger"></h5>
             <p class="card-text"></p>
@@ -115,6 +115,6 @@
       <button id="scrollToTopBtn" class="scroll">↑ Top</button>
     </div>
 
-    <script src="JS/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
